<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ios_background">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionButtonsCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/ios_spacing_lg"
            android:paddingBottom="0dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ios_spacing_sm"
                android:background="@drawable/ios_card_background"
                android:elevation="@dimen/ios_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ios_spacing_lg">
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/enableSpeakSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_speak"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:checked="false"
                        style="@style/Widget.App.Switch.iOS" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/ios_spacing_md"
                        android:layout_marginBottom="@dimen/ios_spacing_md"
                        android:background="@color/ios_separator" />
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/includeAppNameSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/include_app_name"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:checked="false"
                        style="@style/Widget.App.Switch.iOS" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ios_spacing_xl"
                android:background="@drawable/ios_card_background"
                android:elevation="@dimen/ios_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ios_spacing_lg">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extract_regex_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <EditText
                        android:id="@+id/extractRegexEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ios_text_field_height"
                        android:hint="@string/extract_regex_hint"
                        android:inputType="text"
                        android:background="@drawable/ios_text_field_background"
                        android:paddingStart="@dimen/ios_spacing_lg"
                        android:paddingEnd="@dimen/ios_spacing_lg"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_lg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clean_regex_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <EditText
                        android:id="@+id/cleanRegexEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ios_text_field_height"
                        android:hint="@string/clean_regex_hint"
                        android:inputType="text"
                        android:background="@drawable/ios_text_field_background"
                        android:paddingStart="@dimen/ios_spacing_lg"
                        android:paddingEnd="@dimen/ios_spacing_lg"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:textColor="@color/ios_label" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ios_spacing_xl"
                android:background="@drawable/ios_card_background"
                android:elevation="@dimen/ios_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ios_spacing_lg">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speech_template_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <EditText
                        android:id="@+id/speechTemplateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ios_text_field_height"
                        android:hint="@string/speech_template_hint"
                        android:inputType="text"
                        android:background="@drawable/ios_text_field_background"
                        android:paddingStart="@dimen/ios_spacing_lg"
                        android:paddingEnd="@dimen/ios_spacing_lg"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_lg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speech_template_with_app_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <EditText
                        android:id="@+id/speechTemplateWithAppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ios_text_field_height"
                        android:hint="@string/speech_template_with_app_hint"
                        android:inputType="text"
                        android:background="@drawable/ios_text_field_background"
                        android:paddingStart="@dimen/ios_spacing_lg"
                        android:paddingEnd="@dimen/ios_spacing_lg"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:textColor="@color/ios_label" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ios_spacing_xl"
                android:background="@drawable/ios_card_background"
                android:elevation="@dimen/ios_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ios_spacing_lg">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/voice_language_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <Spinner
                        android:id="@+id/voiceSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ios_button_height_sm"
                        android:background="@drawable/ios_text_field_background"
                        android:paddingStart="@dimen/ios_spacing_lg"
                        android:paddingEnd="@dimen/ios_spacing_lg"
                        android:layout_marginBottom="@dimen/ios_spacing_lg" />
                    <TextView
                        android:id="@+id/speedLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <SeekBar
                        android:id="@+id/speedSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="150"
                        android:progress="100"
                        android:layout_marginBottom="@dimen/ios_spacing_lg" />
                    <TextView
                        android:id="@+id/pitchLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pitch_label"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_sm" />
                    <SeekBar
                        android:id="@+id/pitchSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="150"
                        android:progress="100" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ios_spacing_xl"
                android:layout_marginBottom="@dimen/ios_spacing_xl"
                android:background="@drawable/ios_card_background"
                android:elevation="@dimen/ios_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ios_spacing_lg">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speak_history_title"
                        android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                        android:textColor="@color/ios_label"
                        android:layout_marginBottom="@dimen/ios_spacing_md" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/historyRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <androidx.cardview.widget.CardView
        android:id="@+id/actionButtonsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ios_card_background"
        android:elevation="@dimen/ios_card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/ios_spacing_lg">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/ios_button_height"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/ios_spacing_sm"
                android:backgroundTint="@color/button_save_green"
                android:text="@string/save_config"
                android:textAllCaps="false"
                style="@style/Widget.App.Button.iOS" />
            <Button
                android:id="@+id/testButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/ios_button_height"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/ios_spacing_sm"
                android:text="@string/test_speech"
                android:textAllCaps="false"
                style="@style/Widget.App.Button.iOS" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
