<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ios_background"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ios_spacing_lg">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ios_spacing_sm"
            android:background="@drawable/ios_card_background"
            android:elevation="@dimen/ios_card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ios_spacing_xl">
                <TextView
                    android:id="@+id/serviceStatusLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/forwarding_service_status"
                    android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                    android:textColor="@color/ios_label_secondary" />
                <TextView
                    android:id="@+id/serviceStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/ios_spacing_sm"
                    android:text="@string/service_disabled"
                    android:textAppearance="@style/TextAppearance.App.Title.iOS"
                    android:textColor="@color/ios_label" />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/enableServiceSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/ios_spacing_xl"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.App.Body.iOS"
                    style="@style/Widget.App.Switch.iOS" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ios_spacing_xl"
            android:background="@drawable/ios_card_background"
            android:elevation="@dimen/ios_card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ios_spacing_xl">
                <TextView
                    android:id="@+id/permissionStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/permission_status_checking"
                    android:textAppearance="@style/TextAppearance.App.Body.iOS"
                    android:textColor="@color/ios_label"
                    android:gravity="center" />
                <Button
                    android:id="@+id/permissionButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ios_button_height"
                    android:layout_marginTop="@dimen/ios_spacing_lg"
                    android:text="@string/grant_permission"
                    android:textAllCaps="false"
                    style="@style/Widget.App.Button.iOS" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ios_spacing_xl"
            android:background="@drawable/ios_card_background"
            android:elevation="@dimen/ios_card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ios_spacing_xl">
                <TextView
                    android:id="@+id/batteryOptimizationStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Battery Optimization: Checking..."
                    android:textAppearance="@style/TextAppearance.App.Body.iOS"
                    android:textColor="@color/ios_label"
                    android:gravity="center" />
                <Button
                    android:id="@+id/batteryOptimizationButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ios_button_height"
                    android:layout_marginTop="@dimen/ios_spacing_lg"
                    android:text="Disable Battery Optimization"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    style="@style/Widget.App.Button.iOS" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ios_spacing_xl"
            android:background="@drawable/ios_card_background"
            android:elevation="@dimen/ios_card_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ios_spacing_xl">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="App Settings"
                    android:textAppearance="@style/TextAppearance.App.Headline.iOS"
                    android:textColor="@color/ios_label_secondary"
                    android:layout_marginBottom="@dimen/ios_spacing_lg" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Biometric Authentication"
                        android:textAppearance="@style/TextAppearance.App.Body.iOS"
                        android:textColor="@color/ios_label" />
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/biometricSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Switch.iOS" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ios_spacing_xxl"
            android:layout_marginBottom="@dimen/ios_spacing_lg"
            android:text="Version 1.1.0"
            android:textAppearance="@style/TextAppearance.App.Caption.iOS"
            android:textColor="@color/ios_gray" />
    </LinearLayout>
</ScrollView>
